<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".activities.SigninActivity">

    <ImageView
        android:id="@+id/backIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/goBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_black_24dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/quicksand"
        android:text="@string/signin"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backIcon" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/quicksand"
        android:labelFor="@+id/emailAddress"
        android:text="@string/emailAddressLabel"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/light_border"
        android:ems="10"
        android:fontFamily="@font/quicksand"
        android:inputType="textEmailAddress"
        android:paddingBottom="6dp"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryLight"
        android:textCursorDrawable="@null"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/quicksand"
        android:labelFor="@+id/password"
        android:text="@string/passwordLabel"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/light_border"
        android:ems="10"
        android:fontFamily="@font/quicksand"
        android:inputType="textPassword"
        android:paddingBottom="6dp"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryLight"
        android:textCursorDrawable="@null"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:autofillHints="" />

    <ImageView
        android:id="@+id/passIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/togglePassword"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_visibility_off_black_24dp" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/quicksand"
        android:onClick="goToForgotPassword"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/forgotPassword"
        android:textColor="@color/fadeBlueText"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/signIn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_weight="1"
        android:background="@drawable/filled_button"
        android:onClick="emailPassSignIn"
        android:text="@string/signin"
        android:textAllCaps="false"
        android:textColor="@drawable/filled_button_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassword" />

    <Button
        android:id="@+id/googleSignIn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="121dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="24dp"
        android:layout_weight="1"
        android:background="@drawable/filled_button"
        android:drawableStart="@drawable/ic_google_logo"
        android:onClick="googleSignIn"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/googleButtonText"
        android:textAllCaps="false"
        android:textColor="@color/colorTextDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <View
        android:id="@+id/view2"
        style="@style/Divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView7"
        tools:layout_editor_absoluteY="371dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/connectWithHint"
        android:textAllCaps="true"
        android:textColor="@color/fadeBlueText"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/view4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/signIn" />

    <View
        android:id="@+id/view4"
        style="@style/Divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/dontHaveAccount"
        android:textColor="@color/fadeBlueText"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/signup"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/quicksand"
        android:onClick="goToSignUp"
        android:text="@string/signup"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView10" />

</android.support.constraint.ConstraintLayout>